--- a/package.json
+++ b/package.json
@@ -4,10 +4,16 @@
   "description": "Adds classroom assignments with updated grades",
   "main": "server.js",
   "scripts": {
-    "start" : "node server.js"
+    "start": "node server.js",
+    "test" : "mocha --exit"
   },
   "dependencies": {
     "express": "^4.16.3"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
+    "mocha": "^5.2.0"
   },
   "repository": {
     "type": "git",
